--- a/package.json
+++ b/package.json
@@ -39,15 +39,19 @@
 		"format": "biome format",
 		"lint": "biome lint",
 		"check": "biome check",
-		"build": "tsup",
+		"build": "tsc && tsup",
 		"publish:prepare": "bun run build && bun run scripts/prepare.ts",
 		"publish:local": "bun publish:prepare && npm publish ./dist --registry http://localhost:4873 --access public",
 		"publish:npm": "bun publish:prepare && npm publish ./dist --access public",
-		"local:registry": "verdaccio --config ./verdaccio.yaml"
+		"local:registry": "verdaccio --config ./verdaccio.yaml",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.2",
+		"@commitlint/cli": "^19.3.0",
+		"@commitlint/config-conventional": "^19.2.2",
 		"@types/bun": "latest",
+		"husky": "^9.0.11",
 		"tsup": "^8.1.0",
 		"typescript": "^5.0.0",
 		"verdaccio": "^5.31.1"
