--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,22 +16,11 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 # Updated to Node.js 20
+        uses: actions/checkout@v3
 
-      - name: Install Bun
-        run: |
-          curl -fsSL https://bun.sh/install | bash
-          echo 'BUN_INSTALL="$HOME/.bun"' >> $GITHUB_ENV
-          echo 'PATH="$BUN_INSTALL/bin:$PATH"' >> $GITHUB_ENV
-        shell: bash
-
-      - name: Cache Bun dependencies
-        uses: actions/cache@v3 # Updated to Node.js 20
+      - uses: oven-sh/setup-bun@v2
         with:
-          path: ~/.bun
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
+          bun-version: latest
 
       - name: Install dependencies
         run: bun install
@@ -46,7 +35,7 @@ jobs:
         run: bun test
 
       - name: Upload coverage report
-        uses: actions/upload-artifact@v3 # Updated to Node.js 20
+        uses: actions/upload-artifact@v3
         with:
           name: coverage-report
           path: ./coverage
