--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,8 @@ jobs:
 
       - name: Run tests with coverage
         run: bun test
-
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
+        
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
         with:
-          name: coverage-report
-          path: ./coverage
+          token: ${{ secrets.CODECOV_TOKEN }}
