--- a/package.json
+++ b/package.json
@@ -49,16 +49,16 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.2",
-		"@commitlint/cli": "^19.3.0",
-		"@commitlint/config-conventional": "^19.2.2",
-		"@commitlint/cz-commitlint": "^19.2.0",
+		"@commitlint/cli": "^19.6.1",
+		"@commitlint/config-conventional": "^19.6.0",
+		"@commitlint/cz-commitlint": "^19.6.1",
 		"@types/bun": "latest",
-		"commitizen": "^4.3.0",
-		"husky": "^9.0.11",
-		"inquirer": "9",
-		"tsup": "^8.1.0",
-		"typescript": "^5.0.0",
-		"verdaccio": "^5.31.1"
+		"commitizen": "^4.3.1",
+		"husky": "^9.1.7",
+		"inquirer": "^9.3.7",
+		"tsup": "^8.3.5",
+		"typescript": "^5.7.2",
+		"verdaccio": "^5.33.0"
 	},
 	"files": ["dist/*"],
 	"config": {
